_tmp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sedaro-nano-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:032021926264:certificate/61734d9b-fb9f-4b91-b120-58c475678c4a
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/load-balancer-name: sedaro-nano-alb
spec:
  ingressClassName: alb
  rules:
    - host: sedaro-nano.daveops.pro
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: sedaro-nano-app
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sedaro-nano-web
                port:
                  number: 3030
