_tmp/observability.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:032021926264:certificate/61734d9b-fb9f-4b91-b120-58c475678c4a
    alb.ingress.kubernetes.io/load-balancer-name: sedaro-nano-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/group.name: sedaro-observability
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
    - host: sedaro-nano.daveops.pro
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: sedaro-nano-kube-prometheus-stack-grafana
                port:
                  number: 80
